# glue-paste-dev

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  PROJECT-STRUCTURE.md  README.md  bun.lockb  package.json  tsconfig.base.json  tsconfig.json  vitest.workspace.ts
.claude/: settings.json
.github/workflows/: auto-tag.yml  ci.yml  release.yml
.husky/: pre-commit
docs/superpowers/plans/: 2026-03-21-textarea-autogrow.md  2026-03-29-caffeinate-status-fix.md  2026-04-02-test-coverage-gaps.md  2026-04-10-electrobun-desktop-app.md  2026-04-10-electron-desktop-app.md  2026-04-10-readme-electrobun-desktop-app.md  2026-04-10-session-chat-button.md  2026-04-10-update-silent-failure.md  2026-05-21-interactive-terminal-mode.md  2026-05-22-card-proof-of-work.md  2026-05-22-phase3-kanban-automation.md  2026-05-26-phase-1-rust-core-foundation.md  2026-05-26-phase-2-rust-executor.md  2026-05-26-phase-3-tauri-shell.md  2026-05-26-phase-4-ipc-minimum-viable.md  2026-05-26-rust-tauri-migration-roadmap.md  2026-05-27-phase-6-retire-bun-stack.md
docs/superpowers/specs/: 2026-05-22-card-proof-of-work-design.md
docs/superpowers/spikes/: 2026-05-22-interactive-run-sample.md
rust/: .gitignore  Cargo.toml  README.md
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: main.rs
rust/crates/core/: Cargo.toml
rust/crates/core/src/: error.rs  lib.rs
rust/crates/core/src/db/: boards.rs  cards.rs  comments.rs  commits.rs  connection.rs  criteria.rs  executions.rs  mod.rs  schema.rs
rust/crates/core/src/executor/: chat.rs  cli_adapter.rs  execution_logger.rs  extract_report.rs  fresh_env.rs  generate_title.rs  git_errors.rs  mod.rs  process_cleanup.rs  prompt.rs  pty_runner.rs  queue.rs  rate_limit.rs  runner.rs  stream_parser.rs
rust/crates/core/src/terminal/: idle_detector.rs  mod.rs  permission_detector.rs  pty_session.rs  terminal_hub.rs
rust/crates/core/src/types/: board.rs  card.rs  comment.rs  commit.rs  config.rs  criterion.rs  execution.rs  mod.rs
rust/crates/core/tests/: bun_parity.rs
rust/crates/core/tests/fixtures/: bun-created.db
rust/crates/tauri-app/: Cargo.toml  tauri.conf.json
rust/crates/tauri-app/src/: event_callbacks.rs  lib.rs  main.rs  state.rs
rust/crates/tauri-app/src/commands/: ai.rs  auth.rs  boards.rs  caffeinate.rs  cards.rs  chat.rs  comments.rs  commits.rs  config.rs  criteria.rs  executions.rs  files.rs  mod.rs  queue.rs  stats.rs  system.rs  tags.rs  terminal.rs  update.rs
scripts/: build-and-install.sh  build-electron.sh  build-tauri.sh  check-generated-types.sh  install-electrobun.sh  install-electron.sh  install.sh
