[workspace]
resolver = "2"
members = ["crates/core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/glue-paste-dev/glue-paste-dev"

[workspace.dependencies]
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ts-rs = "8"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
tempfile = "3"
