[package]
name = "glue-paste-dev-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ts-rs = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
portable-pty = "0.8"
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
