[package]
name = "glue-paste-dev-tauri"
version.workspace = true
edition.workspace = true

[lib]
name = "glue_paste_dev_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "glue-paste-dev-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
glue-paste-dev-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
